📝 Improve FACS example (#63)

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -72,9 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
-    "\n",
-    "(Here we skip steps of data transformations, which often includes filtering, normalizing, or formatting data.)"
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
@@ -88,7 +86,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -119,6 +119,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This `AnnData` object does not require filtering, normalizing or formatting, hence, there is no ![](https://img.shields.io/badge/Transform-10b981) step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
@@ -126,9 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's validate the features in `.var`.\n",
-    "\n",
-    "We'll use the `CellMarker` reference to link features:"
+    "First, let's validate the features in `.var` using `CellMarker`:"
    ]
   },
   {
@@ -137,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(adata.var.index, \"name\");"
+    "lb.CellMarker.validate(adata.var.index);"
    ]
   },
   {
@@ -150,7 +155,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata.var.index = lb.CellMarker.standardize(adata.var.index)"
@@ -160,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great, now we can validate our markers once more:"
+    "After standardizing, we can validate our markers once more:"
    ]
   },
   {
@@ -169,14 +178,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.CellMarker.validate(adata.var.index, \"name\")"
+    "validated = lb.CellMarker.validate(adata.var.index)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Things look much better, but we still have 5 CellMaker records that seem more like metadata.\n",
+    "More markers are validated now, but we still have 5 cell markers that seem more like metadata.\n",
     "Hence, let's curate the AnnData object a bit more.\n",
     "\n",
     "Let's move metadata (non-validated cell markers) into `adata.obs`:"
@@ -196,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have a clean panel of 35 cell markers:"
+    "Now we have a clean panel of 35 validated cell markers:"
    ]
   },
   {
@@ -205,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(adata.var.index, \"name\");"
+    "lb.CellMarker.validate(adata.var.index);"
    ]
   },
   {
@@ -222,15 +231,7 @@
    "outputs": [],
    "source": [
     "# Feature.from_df creates feature records with type auto-populated\n",
-    "features = ln.Feature.from_df(adata.obs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "features = ln.Feature.from_df(adata.obs)\n",
     "ln.add(features)"
    ]
   },
@@ -238,24 +239,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition, We'd also like to link this file with external features:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(\"assay\", \"name\")\n",
-    "lb.ExperimentalFactor.validate(\"FACS\", \"name\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since we never validated the term \"FACS\", let's search for it's ontology and register it:"
+    "Lastly, we'd like to annotate this file with \"assay\".\n",
+    "\n",
+    "Since we never validated the term \"FACS\", let's search for it's ontolog from public source and register it:"
    ]
   },
   {
@@ -273,8 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "facs = lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0009108\")\n",
-    "facs.save()"
+    "lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0009108\").save()"
    ]
   },
   {
@@ -291,13 +276,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(adata, description=\"Alpert19\", field=lb.CellMarker.name)"
+    "modalities = ln.Modality.lookup()\n",
+    "features = ln.Feature.lookup()\n",
+    "efs = lb.ExperimentalFactor.lookup()\n",
+    "species = lb.Species.lookup()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "file = ln.File.from_anndata(\n",
+    "    adata, description=\"Alpert19\", field=lb.CellMarker.name, modality=modalities.protein\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file.save()"
@@ -306,12 +313,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "features = ln.Feature.lookup()\n",
-    "file.add_labels(facs, features.assay)\n",
-    "file.add_labels(lb.settings.species, features.species)"
+    "file.add_labels(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "file.add_labels(species.human, features.species)"
    ]
   },
   {
@@ -336,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features[\"var\"].df().head(10)"
+    "file.features[\"var\"].df().head()"
    ]
   },
   {
@@ -350,16 +360,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's transform, validate and register another flow file:"
+    "Let's validate and register another flow file:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
-    "\n",
-    "There are no further transformations necessary."
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
@@ -377,6 +385,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This `AnnData` object does not require filtering, normalizing or formatting, hence, there is no ![](https://img.shields.io/badge/Transform-10b981) step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
@@ -384,39 +399,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'd like to track all features in `.var`, so we register them:"
+    "First, let's standardize the cell markers:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata2.var.index = lb.CellMarker.bionty().standardize(adata2.var.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "markers = lb.CellMarker.from_values(adata2.var.index, \"name\")\n",
-    "ln.save(markers)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Standardize synonyms so that all features pass validation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata2.var.index = lb.CellMarker.standardize(adata2.var.index)"
@@ -425,10 +418,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "validated = lb.CellMarker.validate(adata2.var.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Register non-validated markers from Bionty:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "records = lb.CellMarker.from_values(adata2.var.index[~validated])\n",
+    "ln.save(records)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now they pass validation except for non-markers: 'FSC-A', 'FSC-H'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(adata2.var.index, \"name\");"
+    "lb.CellMarker.validate(adata2.var.index);"
    ]
   },
   {
@@ -441,18 +475,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file2 = ln.File.from_anndata(\n",
-    "    adata2, description=\"My fcs file\", field=lb.CellMarker.name\n",
+    "    adata2,\n",
+    "    description=\"My fcs file\",\n",
+    "    field=lb.CellMarker.name,\n",
+    "    modality=modalities.protein,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file2.save()"
@@ -461,11 +506,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "file2.add_labels(facs, features.assay)\n",
-    "file2.add_labels(lb.settings.species, features.species)"
+    "file2.add_labels(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "file2.add_labels(species.human, features.species)"
    ]
   },
   {
@@ -475,6 +524,13 @@
    "outputs": [],
    "source": [
     "file2.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View data flow:"
    ]
   },
   {
@@ -491,14 +547,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query by cell markers ![](https://img.shields.io/badge/Access-10b981) "
+    "## Flow marker registry ![](https://img.shields.io/badge/Access-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which datasets have CD14 in the flow panel:"
+    "Check out your flow marker registry:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "lb.CellMarker.filter().df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Search for a marker (synonyms aware):\n",
+    "\n",
+    "```{tip}\n",
+    "\n",
+    "Search for a non-registered marker from public source: `lb.CellMarker.bionty().search(...)`\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.CellMarker.search(\"PD-1\").head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Auto-complete of markers:"
    ]
   },
   {
@@ -517,6 +614,13 @@
    "outputs": [],
    "source": [
     "cell_markers.cd14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query panels and datasets based on markers, e.g. which datasets have CD14 in the flow panel:"
    ]
   },
   {
@@ -550,7 +654,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14, species__name=\"human\").list()\n",
+    "# no need to load the content of files\n",
+    "files = ln.File.filter(feature_sets__in=panels_with_cd14, species=species.human).list()\n",
     "file1, file2 = files[0], files[1]"
    ]
   },
@@ -571,14 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flow marker registry"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check out your CellMarker registry:"
+    "Load file in memory:"
    ]
   },
   {
@@ -587,7 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.filter().df()"
+    "file1.load()"
    ]
   },
   {
@@ -595,35 +693,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# a few tests\n",
-    "assert set(shared_markers.list(\"name\")) == set(\n",
-    "    [\n",
-    "        \"Ccr7\",\n",
-    "        \"CD3\",\n",
-    "        \"Cd14\",\n",
-    "        \"Cd19\",\n",
-    "        \"CD127\",\n",
-    "        \"CD27\",\n",
-    "        \"CD28\",\n",
-    "        \"CD8\",\n",
-    "        \"Cd4\",\n",
-    "        \"CD57\",\n",
-    "    ]\n",
-    ")\n",
-    "ln.File.filter(feature_sets__in=panels_with_cd14).exists()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
