--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's validate the features in `.var` using `CellMarker`:"
+    "First, let's validate the features in `.var` using {class}`~docs:lnschema_bionty.CellMarker`:"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that many features aren't validated. Let's standardize the identifiers first to get rid of synonyms:"
+    "We see that many features aren't validated. Let's standardize the identifiers to map synonyms:"
    ]
   },
   {
@@ -163,22 +163,7 @@
    },
    "outputs": [],
    "source": [
-    "adata.var.index = lb.CellMarker.standardize(adata.var.index)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After standardizing, we can validate our markers once more:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "adata.var.index = lb.CellMarker.standardize(adata.var.index)\n",
     "validated = lb.CellMarker.validate(adata.var.index)"
    ]
   },
@@ -187,7 +172,7 @@
    "metadata": {},
    "source": [
     "More markers are validated now, but we still have 5 cell markers that seem more like metadata.\n",
-    "Hence, let's curate the AnnData object a bit more.\n",
+    "Hence, let's curate the `AnnData` object a bit more.\n",
     "\n",
     "Let's move metadata (non-validated cell markers) into `adata.obs`:"
    ]
@@ -222,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let's register the metadata features we moved to .obs:"
+    "Next, let's register the metadata features we moved to `.obs`:"
    ]
   },
   {
@@ -231,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature.from_df creates feature records with type auto-populated\n",
+    "# Feature.from_df creates feature records with types\n",
     "features = ln.Feature.from_df(adata.obs)\n",
     "ln.add(features)"
    ]
@@ -242,7 +227,7 @@
    "source": [
     "Lastly, we'd like to annotate this file with \"assay\".\n",
     "\n",
-    "Since we never validated the term \"FACS\", let's search for it's ontolog from public source and register it:"
+    "Since we never validated the term \"FACS\", let's search for its ontology from public source and register it:"
    ]
   },
   {
@@ -400,32 +385,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's standardize the cell markers:"
+    "First, let's standardize the cell markers and validate them:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "adata2.var.index = lb.CellMarker.standardize(adata2.var.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "adata2.var.index = lb.CellMarker.standardize(adata2.var.index)\n",
     "validated = lb.CellMarker.validate(adata2.var.index)"
    ]
   },
@@ -433,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register non-validated markers from Bionty:"
+    "Next, register non-validated markers from Bionty:"
    ]
   },
   {
