--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -26,6 +26,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
