🎨 Use labels.add

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -230,9 +230,9 @@
    },
    "outputs": [],
    "source": [
-    "file.add_labels(cell_types, feature=features.cell_type)\n",
-    "file.add_labels(tissues, feature=features.tissue)\n",
-    "file.add_labels(diseases, feature=features.disease)"
+    "file.labels.add(cell_types, feature=features.cell_type)\n",
+    "file.labels.add(tissues, feature=features.tissue)\n",
+    "file.labels.add(diseases, feature=features.disease)"
    ]
   },
   {
@@ -467,9 +467,9 @@
     "tissues = lb.Tissue.from_values(adata.obs.tissue, lb.Tissue.name)\n",
     "diseases = lb.Disease.from_values(adata.obs.disease, lb.Disease.name)\n",
     "\n",
-    "file_subset.add_labels(cell_types, feature=features.cell_type)\n",
-    "file_subset.add_labels(tissues, feature=features.tissue)\n",
-    "file_subset.add_labels(diseases, feature=features.disease)"
+    "file_subset.labels.add(cell_types, feature=features.cell_type)\n",
+    "file_subset.labels.add(tissues, feature=features.tissue)\n",
+    "file_subset.labels.add(diseases, feature=features.disease)"
    ]
   },
   {
