--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -359,8 +359,8 @@
    },
    "outputs": [],
    "source": [
-    "curated_file.add_labels(efs.rna_seq, features.assay)\n",
-    "curated_file.add_labels(species.saccharomyces_cerevisiae, features.species)"
+    "curated_file.labels.add(efs.rna_seq, features.assay)\n",
+    "curated_file.labels.add(species.saccharomyces_cerevisiae, features.species)"
    ]
   },
   {
