--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -313,8 +313,8 @@
    },
    "outputs": [],
    "source": [
-    "file.add_labels(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "file.add_labels(species.human, features.species)"
+    "file.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "file.labels.add(species.human, features.species)"
    ]
   },
   {
@@ -492,8 +492,8 @@
    },
    "outputs": [],
    "source": [
-    "file2.add_labels(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "file2.add_labels(species.human, features.species)"
+    "file2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "file2.labels.add(species.human, features.species)"
    ]
   },
   {
