--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -371,7 +371,7 @@
     "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], lb.Gene.symbol)\n",
     "ln.save(gene_targets)\n",
     "features = ln.Feature.lookup()\n",
-    "file.add_labels(gene_targets, feature=features.gene_target)"
+    "file.labels.add(gene_targets, feature=features.gene_target)"
    ]
   },
   {
@@ -390,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(nt, feature=features.gene_target)"
+    "file.labels.add(nt, feature=features.gene_target)"
    ]
   },
   {
