--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nt = ln.Label(name=\"NT\", description=\"Non-targeting control of perturbations\")\n",
+    "nt = ln.ULabel(name=\"NT\", description=\"Non-targeting control of perturbations\")\n",
     "nt.save()"
    ]
   },
@@ -400,7 +400,7 @@
    "outputs": [],
    "source": [
     "for col in [\"orig.ident\", \"perturbation\", \"replicate\", \"Phase\", \"guide_ID\"]:\n",
-    "    labels = [ln.Label(name=name) for name in obs[col].unique()]\n",
+    "    labels = [ln.ULabel(name=name) for name in obs[col].unique()]\n",
     "    ln.save(labels)"
    ]
   },
