📝 Added pytometry pp to facs nb

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -56,6 +56,8 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
+    "import pytometry as pm\n",
+    "import scanpy as sc\n",
     "\n",
     "lb.settings.species = \"human\""
    ]
@@ -127,7 +129,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` object does not require filtering, normalizing or formatting, hence, there is no ![](https://img.shields.io/badge/Transform-10b981) step."
+    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.pp.split_signal(adata, var_key=\"channel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.tl.normalize_arcsinh(adata, cofactor=150)"
    ]
   },
   {
@@ -340,6 +360,32 @@
    "outputs": [],
    "source": [
     "file.features[\"var\"].df().head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use auto-complete for marker names:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markers = file.features[\"var\"].lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.pp.pca(adata)\n",
+    "sc.pl.pca(adata, color=markers.cd14.name)"
    ]
   },
   {
