--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validate & register bulk RNA-seq datasets"
+    "# Bulk RNA-seq"
    ]
   },
   {
