--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validate & register spatial data"
+    "# Spatial"
    ]
   },
   {
