--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage a pathway registry"
+    "# Gene Ontology (GO)"
    ]
   },
   {
