📝 Break out FACS

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -20,9 +20,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Flow cytometry is a technique used to analyze and sort cells or particles based on their physical and chemical characteristics as they flow in a fluid stream through a laser beam.\n",
+    "Flow cytometry is a technique used to detect and measure physical and chemical characteristics of a population of cells or particles ([wiki](https://en.wikipedia.org/wiki/Flow_cytometry)).\n",
     "\n",
-    "Here, we'll transform, validate and register two flow cytometry datasets ([Alpert19](https://www.nature.com/articles/s41591-019-0381-y) and [FlowIO sample](https://github.com/whitews/FlowIO/blob/master/examples/fcs_files/100715.fcs)) to demonstrate how to create and query a custom flow cytometry registry."
+    "Here, we'll walk through how to\n",
+    "1. iteratively ingest datasets\n",
+    "2. query & search followed by data integration & analysis and result sharing\n",
+    "\n",
+    "```{toctree}\n",
+    ":maxdepth: 1\n",
+    ":hidden:\n",
+    "\n",
+    "facs1\n",
+    "```"
    ]
   },
   {
@@ -56,8 +65,6 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
-    "import pytometry as pm\n",
-    "import scanpy as sc\n",
     "\n",
     "lb.settings.species = \"human\""
    ]
@@ -75,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Alpert19"
+    "## Ingest a sample dataset"
    ]
   },
   {
@@ -89,7 +96,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start with a flow cytometry file from Alpert19:"
+    "We start with a flow cytometry file from [Alpert *et al.*, Nat. Med. (2019)](https://pubmed.ncbi.nlm.nih.gov/30842675/).\n",
+    "\n",
+    "Calling the following function downloads the file and pre-populates a few relevant registries:"
    ]
   },
   {
@@ -102,9 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.dev.datasets.file_fcs_alpert19(\n",
-    "    populate_registries=True,  # pre-populate registries to simulate an used instance\n",
-    ")"
+    "ln.dev.datasets.file_fcs_alpert19(populate_registries=True)"
    ]
   },
   {
@@ -112,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use [readfcs](https://lamin.ai/docs/readfcs) to read the fcs file into memory:"
+    "We use [readfcs](https://lamin.ai/docs/readfcs) to read the raw fcs file into memory:"
    ]
   },
   {
@@ -129,7 +136,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
+    "### Transform: normalize ![](https://img.shields.io/badge/Transform-10b981)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this use case, we'd like to ingest & store curated data, and hence, we split signal and normalize using the [pytometry](https://github.com/buettnerlab/pytometry) package."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytometry as pm"
    ]
   },
   {
@@ -154,30 +177,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Validate: cell markers ![](https://img.shields.io/badge/Validate-10b981)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's validate the features in `.var` using {class}`~docs:lnschema_bionty.CellMarker`:"
+    "First, we validate features in `.var` using {class}`~docs:lnschema_bionty.CellMarker`:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(adata.var.index);"
+    "validated = lb.CellMarker.validate(adata.var.index)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that many features aren't validated. Let's standardize the identifiers to map synonyms:"
+    "We see that many features aren't validated because they're not standardized.\n",
+    "\n",
+    "Hence, let's standardize feature names & validate again:"
    ]
   },
   {
@@ -198,10 +227,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More markers are validated now, but we still have 5 cell markers that seem more like metadata.\n",
-    "Hence, let's curate the `AnnData` object a bit more.\n",
+    "Now, five features don't pass validation.\n",
     "\n",
-    "Let's move metadata (non-validated cell markers) into `adata.obs`:"
+    "These appear don't appear to be cell markers but rather metadata features.\n",
+    "\n",
+    "Let's move them into `adata.obs`:"
    ]
   },
   {
@@ -227,34 +257,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(adata.var.index);"
+    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "assert all(validated)  # all markers are validated"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let's register the metadata features we moved to `.obs`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Feature.from_df creates feature records with types\n",
-    "features = ln.Feature.from_df(adata.obs)\n",
-    "ln.add(features)"
+    "### Register metadata ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lastly, we'd like to annotate this file with \"assay\".\n",
+    "Next, let's register the metadata features we moved to `.obs`.\n",
     "\n",
-    "Since we never validated the term \"FACS\", let's search for its ontology from public source and register it:"
+    "For this, we create one feature record for each column in the `.obs` dataframe:"
    ]
   },
   {
@@ -263,7 +283,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.bionty().search(\"FACS\").head(2)"
+    "features = ln.Feature.from_df(adata.obs)\n",
+    "ln.save(features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use the experimental factor ontology to create a \"FACS\" label for the dataset."
    ]
   },
   {
@@ -272,7 +300,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0009108\").save()"
+    "lb.ExperimentalFactor.bionty().search(\"FACS\").head(2)  # search the public ontology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.ExperimentalFactor.from_bionty(\n",
+    "    ontology_id=\"EFO:0009108\"\n",
+    ").save()  # create a record ans save it to the registry\n",
+    "\n",
+    "lb.ExperimentalFactor.filter().df()  # show the content of the registry"
    ]
   },
   {
@@ -280,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981)"
+    "### Register: register data & annotate with metadata ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
@@ -299,9 +340,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -314,9 +353,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -324,17 +361,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Annotate by linking FACS & species labels:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
     "file.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
     "file.labels.add(species.human, features.species)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspect the registered dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect features on a high level:"
    ]
   },
   {
@@ -350,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check a few validated cell markers in `.var`:"
+    "Inspect low-level features in `.var`:"
    ]
   },
   {
@@ -384,348 +440,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import scanpy as sc\n",
+    "\n",
     "sc.pp.pca(adata)\n",
     "sc.pl.pca(adata, color=markers.cd14.name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## FlowIO sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's validate and register another flow file:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Access ![](https://img.shields.io/badge/Access-10b981)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "adata2 = readfcs.read(ln.dev.datasets.file_fcs())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This `AnnData` object does not require filtering, normalizing or formatting, hence, there is no ![](https://img.shields.io/badge/Transform-10b981) step."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, let's standardize the cell markers and validate them:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "adata2.var.index = lb.CellMarker.standardize(adata2.var.index)\n",
-    "validated = lb.CellMarker.validate(adata2.var.index)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, register non-validated markers from Bionty:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "records = lb.CellMarker.from_values(adata2.var.index[~validated])\n",
-    "ln.save(records)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now they pass validation except for non-markers: 'FSC-A', 'FSC-H'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.CellMarker.validate(adata2.var.index);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file2 = ln.File.from_anndata(\n",
-    "    adata2,\n",
-    "    description=\"My fcs file\",\n",
-    "    field=lb.CellMarker.name,\n",
-    "    modality=modalities.protein,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file2.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "file2.labels.add(species.human, features.species)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file2.features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "View data flow:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file2.view_flow()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Flow marker registry ![](https://img.shields.io/badge/Access-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check out your flow marker registry:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "lb.CellMarker.filter().df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Search for a marker (synonyms aware):\n",
-    "\n",
-    "```{tip}\n",
-    "\n",
-    "Search for a non-registered marker from public source: `lb.CellMarker.bionty().search(...)`\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.CellMarker.search(\"PD-1\").head(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Auto-complete of markers:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_markers = lb.CellMarker.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_markers.cd14"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query panels and datasets based on markers, e.g. which datasets have CD14 in the flow panel:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "panels_with_cd14 = ln.FeatureSet.filter(cell_markers=cell_markers.cd14).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.File.filter(feature_sets__in=panels_with_cd14).df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Shared cell markers between two files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# no need to load the content of files\n",
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14, species=species.human).list()\n",
-    "file1, file2 = files[0], files[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1_markers = file1.features[\"var\"]\n",
-    "file2_markers = file2.features[\"var\"]\n",
-    "\n",
-    "shared_markers = file1_markers & file2_markers\n",
-    "shared_markers.list(\"name\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load file in memory:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1.load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force test-flow\n",
-    "!rm -r test-flow"
    ]
   }
  ],
