--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -33,14 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ingest another sample dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us validate and register another flow file:"
+    "Let us validate and register another `.fcs` file:"
    ]
   },
   {
@@ -58,7 +51,7 @@
    "source": [
     "filepath = ln.dev.datasets.file_fcs()\n",
     "\n",
-    "adata2 = readfcs.read(filepath)"
+    "adata = readfcs.read(filepath)"
    ]
   },
   {
@@ -88,8 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata2.var.index = lb.CellMarker.standardize(adata2.var.index)\n",
-    "validated = lb.CellMarker.validate(adata2.var.index)"
+    "adata.var.index = lb.CellMarker.standardize(adata.var.index)\n",
+    "validated = lb.CellMarker.validate(adata.var.index)"
    ]
   },
   {
@@ -105,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "records = lb.CellMarker.from_values(adata2.var.index[~validated])\n",
+    "records = lb.CellMarker.from_values(adata.var.index[~validated])\n",
     "ln.save(records)"
    ]
   },
@@ -113,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now they pass validation except for non-markers: 'FSC-A', 'FSC-H'"
+    "Now they pass validation except for non-markers: `'FSC-A'`, `'FSC-H'`"
    ]
   },
   {
@@ -122,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.validate(adata2.var.index);"
+    "lb.CellMarker.validate(adata.var.index);"
    ]
   },
   {
@@ -138,8 +131,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2 = ln.File.from_anndata(\n",
-    "    adata2,\n",
+    "modalities = ln.Modality.lookup()\n",
+    "features = ln.Feature.lookup()\n",
+    "efs = lb.ExperimentalFactor.lookup()\n",
+    "species = lb.Species.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = ln.File.from_anndata(\n",
+    "    adata,\n",
     "    description=\"My fcs file\",\n",
     "    field=lb.CellMarker.name,\n",
     "    modality=modalities.protein,\n",
@@ -152,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2.save()"
+    "file.save()"
    ]
   },
   {
@@ -161,8 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "file2.labels.add(species.human, features.species)"
+    "file.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "file.labels.add(species.human, features.species)"
    ]
   },
   {
@@ -171,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2.features"
+    "file.features"
    ]
   },
   {
@@ -187,159 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2.view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Flow marker registry ![](https://img.shields.io/badge/Access-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check out your flow marker registry:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.CellMarker.filter().df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Search for a marker (synonyms aware):\n",
-    "\n",
-    "```{tip}\n",
-    "\n",
-    "Search for a non-registered marker from public source: `lb.CellMarker.bionty().search(...)`\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.CellMarker.search(\"PD-1\").head(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Auto-complete of markers:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_markers = lb.CellMarker.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cell_markers.cd14"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query panels and datasets based on markers, e.g. which datasets have CD14 in the flow panel:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "panels_with_cd14 = ln.FeatureSet.filter(cell_markers=cell_markers.cd14).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.File.filter(feature_sets__in=panels_with_cd14).df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Shared cell markers between two files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# no need to load the content of files\n",
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14, species=species.human).list()\n",
-    "file1, file2 = files[0], files[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1_markers = file1.features[\"var\"]\n",
-    "file2_markers = file2.features[\"var\"]\n",
-    "\n",
-    "shared_markers = file1_markers & file2_markers\n",
-    "shared_markers.list(\"name\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load file in memory:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file1.load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force test-flow\n",
-    "!rm -r test-flow"
+    "file.view_flow()"
    ]
   }
  ],
