--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Access ![](https://img.shields.io/badge/Access-10b981)"
+    "## Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "## Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
+    "## Register ![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
