--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query & analyze flow cytometry datasets"
+    "# Query & analyze flow cytometry datasets"
    ]
   },
   {
@@ -182,8 +182,32 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py39",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
+  },
+  "nbproject": {
+   "id": "wukchS8V976U",
+   "parent": null,
+   "pypackage": null,
+   "time_init": "2023-09-22T13:30:35.147418+00:00",
+   "user_handle": null,
+   "user_id": null,
+   "user_name": null,
+   "version": "0"
   }
  },
  "nbformat": 4,
