--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -126,6 +126,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Access registries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ln.Feature.lookup()\n",
+    "efs = lb.ExperimentalFactor.lookup()\n",
+    "species = lb.Species.lookup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Shared cell markers between two files:"
    ]
   },
